Fixed button width overflow

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 .menu {
   padding: 10px 5% 0 5%;
-  width: 100%;
+  width: auto;
 }
 
 .item {
